--- a/dicee.html
+++ b/dicee.html
@@ -13,18 +13,18 @@
       <h1>Refresh Me</h1>
 
       <div class="dice">
-        <p>Player 1</p>
-        <img class="img1" src="">
+        <p>Python</p>
+        <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
-        <p>Player 2</p>
-        <img class="img2" src="">
+        <p>JavaScript</p>
+        <img class="img2" src="images/dice6.png">
       </div>
 
     </div>
 
-
+<script src="index.js"></script>
   </body>
 
   <footer>
